--- a/modules/home-manager/features/vesktop/my.theme.css.mustache
+++ b/modules/home-manager/features/vesktop/my.theme.css.mustache
@@ -9,21 +9,21 @@
 
 :root {
   --font: Rubik;
-  --accentcolor: {{base0D-rgb-{r,g,b}}};
-  --accentcolor2: {{base0C-rgb-{r,g,b}}};
-  --linkcolor: {{base0D-rgb-{r,g,b}}};
-  --mentioncolor: {{base0A-rgb-{r,g,b}}};
-  --textbrightest: {{base07-rgb-{r,g,b}}};
-  --textbrighter: {{base06-rgb-{r,g,b}}};
-  --textbright: {{base06-rgb-{r,g,b}}};
-  --textdark: {{base05-rgb-{r,g,b}}};
-  --textdarker: {{base05-rgb-{r,g,b}}};
-  --textdarkest: {{base04-rgb-{r,g,b}}};
-  --backgroundaccent: {{base0D-rgb-{r,g,b}}};
-  --backgroundprimary: {{base00-rgb-{r,g,b}}};
-  --backgroundsecondary: {{base01-rgb-{r,g,b}}};
-  --backgroundsecondaryalt: {{base01-rgb-{r,g,b}}};
-  --backgroundtertiary: {{base02-rgb-{r,g,b}}};
-  --backgroundfloating: {{base02-rgb-{r,g,b}}};
+  --accentcolor: {{base0D-rgb};
+  --accentcolor2: {{base0C-rgb};
+  --linkcolor: {{base0D-rgb}};
+  --mentioncolor: {{base0A-rgb});
+  --textbrightest: {{base07-rgb}};
+  --textbrighter: {{base06-rgb}};
+  --textbright: {{base06-rgb}};
+  --textdark: {{base05-rgb}};
+  --textdarker: {{base05-rgb}};
+  --textdarkest: {{base04-rgb}};
+  --backgroundaccent: {{base0D-rgb}};
+  --backgroundprimary: {{base00-rgb}};
+  --backgroundsecondary: {{base01-rgb}};
+  --backgroundsecondaryalt: {{base01-rgb}};
+  --backgroundtertiary: {{base02-rgb}};
+  --backgroundfloating: {{base02-rgb}};
   --settingsicons: 1;
 }
