oomox didnt change the colors of the suru++ theme for some reason

--- a/modules/home-manager/features/vesktop/my.theme.css.mustache
+++ b/modules/home-manager/features/vesktop/my.theme.css.mustache
@@ -9,8 +9,8 @@
 
 :root {
   --font: Rubik;
-  --accentcolor: {{base0D-rgb};
-  --accentcolor2: {{base0C-rgb};
+  --accentcolor: {{base0D-rgb}};
+  --accentcolor2: {{base0C-rgb}};
   --linkcolor: {{base0D-rgb}};
   --mentioncolor: {{base0A-rgb});
   --textbrightest: {{base07-rgb}};
