--- a/modules/home-manager/features/vesktop/my.theme.css.mustache
+++ b/modules/home-manager/features/vesktop/my.theme.css.mustache
@@ -9,7 +9,7 @@
 
 :root {
   --font: Rubik;
-  --accentcolor: {{base0D-rgb}};
+  --accentcolor: {{base0D-rgb-r}},{{base0D-rgb-g}},{{base0D-rgb-b}};
   --accentcolor2: {{base0C-rgb}};
   --linkcolor: {{base0D-rgb}};
   --mentioncolor: {{base0A-rgb});
