--- a/modules/home-manager/features/vesktop/my.theme.css.mustache
+++ b/modules/home-manager/features/vesktop/my.theme.css.mustache
@@ -10,20 +10,20 @@
 :root {
   --font: Rubik;
   --accentcolor: {{base0D-rgb-r}},{{base0D-rgb-g}},{{base0D-rgb-b}};
-  --accentcolor2: {{base0C-rgb}};
-  --linkcolor: {{base0D-rgb}};
-  --mentioncolor: {{base0A-rgb});
-  --textbrightest: {{base07-rgb}};
-  --textbrighter: {{base06-rgb}};
-  --textbright: {{base06-rgb}};
-  --textdark: {{base05-rgb}};
-  --textdarker: {{base05-rgb}};
-  --textdarkest: {{base04-rgb}};
-  --backgroundaccent: {{base0D-rgb}};
-  --backgroundprimary: {{base00-rgb}};
-  --backgroundsecondary: {{base01-rgb}};
-  --backgroundsecondaryalt: {{base01-rgb}};
-  --backgroundtertiary: {{base02-rgb}};
-  --backgroundfloating: {{base02-rgb}};
+  --accentcolor2: {{base0C-rgb-r}},{{base0C-rgb-g}},{{base0C-rgb-b}};
+  --linkcolor: {{base0D-rgb-r}},{{base0D-rgb-g}},{{base0D-rgb-b}};
+  --mentioncolor: {{base0A-rgb-r}),{{base0A-rgb-g}),{{base0A-rgb-b});
+  --textbrightest: {{base07-rgb-r}},{{base07-rgb-g}},{{base07-rgb-b}};
+  --textbrighter: {{base06-rgb-r}},{{base06-rgb-g}},{{base06-rgb-b}};
+  --textbright: {{base06-rgb-r}},{{base06-rgb-g}},{{base06-rgb-b}};
+  --textdark: {{base05-rgb-r}},{{base05-rgb-g}},{{base05-rgb-b}};
+  --textdarker: {{base05-rgb-r}},{{base05-rgb-g}},{{base05-rgb-b}};
+  --textdarkest: {{base04-rgb-r}},{{base04-rgb-g}},{{base04-rgb-b}};
+  --backgroundaccent: {{base0D-rgb-r}},{{base0D-rgb-g}},{{base0D-rgb-b}};
+  --backgroundprimary: {{base00-rgb-r}},{{base00-rgb-g}},{{base00-rgb-b}},;
+  --backgroundsecondary: {{base01-rgb-r}},{{base01-rgb-g}},{{base01-rgb-b}};
+  --backgroundsecondaryalt: {{base01-rgb-r}},{{base01-rgb-g}},{{base01-rgb-b}};
+  --backgroundtertiary: {{base02-rgb-r}},{{base02-rgb-g}},{{base02-rgb-b}};
+  --backgroundfloating: {{base02-rgb-r}},{{base02-rgb-g}},{{base02-rgb-b}};
   --settingsicons: 1;
 }
