--- a/modules/home-manager/features/vesktop/my.theme.css.mustache
+++ b/modules/home-manager/features/vesktop/my.theme.css.mustache
@@ -19,11 +19,11 @@
   --textdark: {{base05-rgb-r}},{{base05-rgb-g}},{{base05-rgb-b}};
   --textdarker: {{base05-rgb-r}},{{base05-rgb-g}},{{base05-rgb-b}};
   --textdarkest: {{base04-rgb-r}},{{base04-rgb-g}},{{base04-rgb-b}};
-  --backgroundaccent: {{base0D-rgb-r}},{{base0D-rgb-g}},{{base0D-rgb-b}};
+  --backgroundaccent: {{base00-rgb-r}},{{base00-rgb-g}},{{base00-rgb-b}};
   --backgroundprimary: {{base00-rgb-r}},{{base00-rgb-g}},{{base00-rgb-b}},;
-  --backgroundsecondary: {{base01-rgb-r}},{{base01-rgb-g}},{{base01-rgb-b}};
+  --backgroundsecondary: {{base00-rgb-r}},{{base00-rgb-g}},{{base00-rgb-b}};
   --backgroundsecondaryalt: {{base01-rgb-r}},{{base01-rgb-g}},{{base01-rgb-b}};
-  --backgroundtertiary: {{base02-rgb-r}},{{base02-rgb-g}},{{base02-rgb-b}};
+  --backgroundtertiary: {{base01-rgb-r}},{{base01-rgb-g}},{{base01-rgb-b}};
   --backgroundfloating: {{base02-rgb-r}},{{base02-rgb-g}},{{base02-rgb-b}};
   --settingsicons: 1;
 }
