oomox didnt change the colors of the suru++ theme for some reason

--- a/modules/home-manager/features/vesktop/my.theme.css.mustache
+++ b/modules/home-manager/features/vesktop/my.theme.css.mustache
@@ -20,8 +20,8 @@
   --textdarker: {{base05-rgb-r}},{{base05-rgb-g}},{{base05-rgb-b}};
   --textdarkest: {{base04-rgb-r}},{{base04-rgb-g}},{{base04-rgb-b}};
   --backgroundaccent: {{base02-rgb-r}},{{base02-rgb-g}},{{base02-rgb-b}};
-  --backgroundprimary: {{base00-rgb-r}},{{base00-rgb-g}},{{base00-rgb-b}},;
-  --backgroundsecondary: {{base01-rgb-r}},{{base01-rgb-g}},{{base01-rgb-b}};
+  --backgroundprimary: {{base00-rgb-r}},{{base00-rgb-g}},{{base00-rgb-b}};
+  --backgroundsecondary: {{base00-rgb-r}},{{base00-rgb-g}},{{base00-rgb-b}};
   --backgroundsecondaryalt: {{base00-rgb-r}},{{base00-rgb-g}},{{base00-rgb-b}};
   --backgroundtertiary: {{base00-rgb-r}},{{base00-rgb-g}},{{base00-rgb-b}};
   --backgroundfloating: {{base02-rgb-r}},{{base02-rgb-g}},{{base02-rgb-b}};
