--- a/modules/home-manager/features/vesktop/my.theme.css.mustache
+++ b/modules/home-manager/features/vesktop/my.theme.css.mustache
@@ -12,8 +12,8 @@
   --accentcolor: {{base0D-rgb-r}},{{base0D-rgb-g}},{{base0D-rgb-b}};
   --accentcolor2: {{base0C-rgb-r}},{{base0C-rgb-g}},{{base0C-rgb-b}};
   --linkcolor: {{base0D-rgb-r}},{{base0D-rgb-g}},{{base0D-rgb-b}};
-  --mentioncolor: {{base0A-rgb-r}),{{base0A-rgb-g}),{{base0A-rgb-b});
-  --textbrightest: 0,0,0;
+  --mentioncolor: {{base0A-rgb-r}),{{base0A-rgb-g}),{{base0A-rgb-b}};
+  --textbrightest: {{base07-rgb-r}},{{base07-rgb-g}},{{base07-rgb-b}};
   --textbrighter: {{base06-rgb-r}},{{base06-rgb-g}},{{base06-rgb-b}};
   --textbright: {{base06-rgb-r}},{{base06-rgb-g}},{{base06-rgb-b}};
   --textdark: {{base05-rgb-r}},{{base05-rgb-g}},{{base05-rgb-b}};
