--- a/modules/home-manager/features/vesktop/my.theme.css.mustache
+++ b/modules/home-manager/features/vesktop/my.theme.css.mustache
@@ -10,7 +10,7 @@
 :root {
   --font: Rubik;
   --accentcolor: {{base0D-rgb-r}},{{base0D-rgb-g}},{{base0D-rgb-b}};
-  --accentcolor2: {{base0C-rgb-r}},{{base0C-rgb-g}},{{base0C-rgb-b}};
+  --accentcolor2: {{base0F-rgb-r}},{{base0F-rgb-g}},{{base0F-rgb-b}};
   --linkcolor: {{base0D-rgb-r}},{{base0D-rgb-g}},{{base0D-rgb-b}};
   --mentioncolor: {{base0A-rgb-r}},{{base0A-rgb-g}},{{base0A-rgb-b}};
   --textbrightest: {{base07-rgb-r}},{{base07-rgb-g}},{{base07-rgb-b}};
