--- a/modules/home-manager/features/vesktop/my.theme.css.mustache
+++ b/modules/home-manager/features/vesktop/my.theme.css.mustache
@@ -27,3 +27,7 @@
   --backgroundfloating: {{base01-rgb-r}},{{base01-rgb-g}},{{base01-rgb-b}};
   --settingsicons: 1;
 }
+
+* {
+  scrollber-color: {{base01-rgb-r}},{{base01-rgb-g}},{{base01-rgb-b}};
+}
