--- a/modules/home-manager/features/vesktop/my.theme.css.mustache
+++ b/modules/home-manager/features/vesktop/my.theme.css.mustache
@@ -25,9 +25,10 @@
   --backgroundsecondaryalt: {{base00-rgb-r}},{{base00-rgb-g}},{{base00-rgb-b}};
   --backgroundtertiary: {{base00-rgb-r}},{{base00-rgb-g}},{{base00-rgb-b}};
   --backgroundfloating: {{base01-rgb-r}},{{base01-rgb-g}},{{base01-rgb-b}};
-  --scrollbar-auto-thumb: {{base01-rgb-r}},{{base01-rgb-g}},{{base01-rgb-b}};
-  --scrollbar-thin-thumb: {{base01-rgb-r}},{{base01-rgb-g}},{{base01-rgb-b}};
-  --scrollbar-auto-scrollbar-color-thumb: {{base01-rgb-r}},{{base01-rgb-g}},{{base01-rgb-b}};
 
   --settingsicons: 1;
+}
+
+.auto_c49869::webkit-scrollbar-track {
+  background-color: {{base01-rgb-r}},{{base01-rgb-g}},{{base01-rgb-b}};
 }
