--- a/modules/home-manager/features/vesktop/my.theme.css.mustache
+++ b/modules/home-manager/features/vesktop/my.theme.css.mustache
@@ -29,6 +29,6 @@
   --settingsicons: 1;
 }
 
-.auto_c49869::webkit-scrollbar-track {
+.auto_c49869::-webkit-scrollbar-thumb {
   background-color: {{base01-rgb-r}},{{base01-rgb-g}},{{base01-rgb-b}};
 }
