--- a/modules/home-manager/features/vesktop/my.theme.css.mustache
+++ b/modules/home-manager/features/vesktop/my.theme.css.mustache
@@ -30,5 +30,5 @@
 }
 
 .auto_c49869::-webkit-scrollbar-thumb {
-  background-color: {{base01-rgb-r}},{{base01-rgb-g}},{{base01-rgb-b}};
+  background-color: #{{base01-hex}};
 }
