--- a/modules/home-manager/features/vesktop/my.theme.css.mustache
+++ b/modules/home-manager/features/vesktop/my.theme.css.mustache
@@ -32,3 +32,7 @@
 .auto_c49869::-webkit-scrollbar-thumb {
   background-color: #{{base01-hex}};
 }
+
+itemCard_f02fcf wrapper_cd82a7 outer_ac5d22 padded_ac5d22 interactive_ac5d22:hover {
+  background-color: #{{base01-hex}};
+}
