--- a/modules/home-manager/features/vesktop/my.theme.css.mustache
+++ b/modules/home-manager/features/vesktop/my.theme.css.mustache
@@ -33,6 +33,6 @@
   background-color: #{{base01-hex}};
 }
 
-itemCard_f02fcf:hover {
+interactive_ac5d22:hover {
   background-color: #{{base01-hex}};
 }
