--- a/modules/home-manager/features/vesktop/my.theme.css.mustache
+++ b/modules/home-manager/features/vesktop/my.theme.css.mustache
@@ -9,8 +9,8 @@
 
 :root {
   --font: Rubik;
-  --accentcolor: {{base0D-rgb-r}},{{base0D-rgb-g}},{{base0D-rgb-b}};
-  --accentcolor2: {{base0F-rgb-r}},{{base0F-rgb-g}},{{base0F-rgb-b}};
+  --accentcolor: {{base0F-rgb-r}},{{base0F-rgb-g}},{{base0F-rgb-b}};
+  --accentcolor2: {{base0D-rgb-r}},{{base0D-rgb-g}},{{base0D-rgb-b}};
   --linkcolor: {{base0D-rgb-r}},{{base0D-rgb-g}},{{base0D-rgb-b}};
   --mentioncolor: {{base0A-rgb-r}},{{base0A-rgb-g}},{{base0A-rgb-b}};
   --textbrightest: {{base06-rgb-r}},{{base06-rgb-g}},{{base06-rgb-b}};
@@ -33,6 +33,6 @@
   background-color: #{{base01-hex}};
 }
 
-interactive_ac5d22:hover {
-  background-color: #{{base01-hex}};
+.tabBar_c2739c .addFriend_c2739c.addFriend_c2739c.addFriend_c2739c {
+  background-color: ${{base0F-hex}};
 }
