--- a/modules/home-manager/features/vesktop/my.theme.css.mustache
+++ b/modules/home-manager/features/vesktop/my.theme.css.mustache
@@ -34,5 +34,9 @@
 }
 
 .tabBar_c2739c .addFriend_c2739c.addFriend_c2739c.addFriend_c2739c {
-  background-color: ${{base0F-hex}};
+  background-color: #{{base0F-hex}};
+}
+
+.popout_14239 {
+  background-color: #{{base01-hex}};
 }
