--- a/modules/home-manager/features/vesktop/my.theme.css.mustache
+++ b/modules/home-manager/features/vesktop/my.theme.css.mustache
@@ -37,6 +37,6 @@
   background-color: #{{base0F-hex}};
 }
 
-.popout_14239 {
+.inner_c69a7b .biteSize_c69a7b {
   background-color: #{{base01-hex}};
 }
