--- a/modules/home-manager/features/vesktop/my.theme.css.mustache
+++ b/modules/home-manager/features/vesktop/my.theme.css.mustache
@@ -37,6 +37,6 @@
   background-color: #{{base0F-hex}};
 }
 
-.inner_c69a7b.bitesize_c69a7b {
+.inner_c69a7b.biteSize_c69a7b {
   background-color: #{{base01-hex}};
 }
