--- a/modules/home-manager/features/vesktop/my.theme.css.mustache
+++ b/modules/home-manager/features/vesktop/my.theme.css.mustache
@@ -40,3 +40,7 @@
 .inner_c69a7b.biteSize_c69a7b {
   background-color: #{{base00-hex}};
 }
+
+.role_f9575e.pill_f9575e {
+  background-color: #{{base01-hex}};
+}
