--- a/modules/home-manager/features/vesktop/my.theme.css.mustache
+++ b/modules/home-manager/features/vesktop/my.theme.css.mustache
@@ -43,4 +43,10 @@
 
 .role_f9575e.pill_f9575e {
   background-color: #{{base01-hex}};
+  border: none;
+}
+
+.collapseButton_e6f2d0.pill_e6f2d0 {
+  background-color: #{{base01-hex}};
+  border: none;
 }
