--- a/modules/home-manager/features/vesktop/my.theme.css.mustache
+++ b/modules/home-manager/features/vesktop/my.theme.css.mustache
@@ -26,6 +26,8 @@
   --backgroundtertiary: {{base00-rgb-r}},{{base00-rgb-g}},{{base00-rgb-b}};
   --backgroundfloating: {{base01-rgb-r}},{{base01-rgb-g}},{{base01-rgb-b}};
 
+  --green-360: #{{base0B-hex}};
+
   --settingsicons: 1;
 }
 
