--- a/modules/home-manager/features/vesktop/my.theme.css.mustache
+++ b/modules/home-manager/features/vesktop/my.theme.css.mustache
@@ -52,3 +52,7 @@
   background-color: #{{base01-hex}};
   border: none;
 }
+
+.itemCard_f02fcf.wrapper_cd82a7.outer_ac5d22.padded_ac5d22.interactive_ac5d22:hover {
+  background-color: #{{base01-hex}};
+}
