--- a/modules/home-manager/features/vesktop/my.theme.css.mustache
+++ b/modules/home-manager/features/vesktop/my.theme.css.mustache
@@ -56,3 +56,16 @@
 .itemCard_f02fcf.wrapper_cd82a7.outer_ac5d22.padded_ac5d22.interactive_ac5d22:hover {
   background-color: #{{base00-hex}};
 }
+
+.inner_c69a7b.fullSize_c69a7b {
+  background-color: #{{base00-hex}};
+}
+
+.container_ecc04c {
+  background-color: #{{base01-hex}};
+}
+
+.container_b64375 {
+  background-color: #{{base01-hex}};
+  border: none;
+}
