--- a/modules/home-manager/features/firefox/chrome/ShyFox/shy-variables.css
+++ b/modules/home-manager/features/firefox/chrome/ShyFox/shy-variables.css
@@ -11,7 +11,7 @@ Values of these variables can be changed safely and most likely nothing will bre
 
 :root, #screenshots-component *{
   /* accent color */
-  --shy-accent-color: #6B6566;
+  --shy-accent-color: #893F45;
   
   /* window border thickness and size of many margins */
   --margin: 0.8rem;
