--- a/modules/home-manager/features/vesktop/my.theme.css.mustache
+++ b/modules/home-manager/features/vesktop/my.theme.css.mustache
@@ -10,8 +10,8 @@
 :root {
   --font: Rubik;
   --accentcolor: {{base0F-rgb-r}},{{base0F-rgb-g}},{{base0F-rgb-b}};
-  --accentcolor2: {{base0D-rgb-r}},{{base0D-rgb-g}},{{base0D-rgb-b}};
-  --linkcolor: {{base0D-rgb-r}},{{base0D-rgb-g}},{{base0D-rgb-b}};
+  --accentcolor2: {{base0F-rgb-r}},{{base0F-rgb-g}},{{base0F-rgb-b}};
+  --linkcolor: {{base0F-rgb-r}},{{base0F-rgb-g}},{{base0F-rgb-b}};
   --mentioncolor: {{base0A-rgb-r}},{{base0A-rgb-g}},{{base0A-rgb-b}};
   --textbrightest: {{base06-rgb-r}},{{base06-rgb-g}},{{base06-rgb-b}};
   --textbrighter: {{base05-rgb-r}},{{base05-rgb-g}},{{base05-rgb-b}};
