--- a/modules/home-manager/features/simple-logout/config/style.css.mustache
+++ b/modules/home-manager/features/simple-logout/config/style.css.mustache
@@ -8,5 +8,5 @@ button {
 }
 
 image {
-  filter: recolor({{base00-rgb-r}} {{basr00-rgb-g}} {{base00-rgb-b}})
+  filter: recolor({{base05-rgb-r}} {{basr05-rgb-g}} {{base05-rgb-b}});
 }
