--- a/modules/home-manager/features/vesktop/my.theme.css.mustache
+++ b/modules/home-manager/features/vesktop/my.theme.css.mustache
@@ -9,7 +9,7 @@
 
 :root {
   --font: Rubik;
-  --accentcolor: {{base0F-rgb-r}},{{base0F-rgb-g}},{{base0F-rgb-b}};
+  --accentcolor: {{customAccent-rgb-r}},{{customAccent-rgb-g}},{{customAccent-rgb-b}};
   --accentcolor2: {{base0F-rgb-r}},{{base0F-rgb-g}},{{base0F-rgb-b}};
   --linkcolor: {{base0F-rgb-r}},{{base0F-rgb-g}},{{base0F-rgb-b}};
   --mentioncolor: {{base0A-rgb-r}},{{base0A-rgb-g}},{{base0A-rgb-b}};
