--- a/modules/home-manager/features/vesktop/base09.theme.css.mustache
+++ b/modules/home-manager/features/vesktop/base09.theme.css.mustache
@@ -9,9 +9,9 @@
 
 :root {
   --font: Rubik;
-  --accentcolor: {{customAccent-rgb-r}},{{customAccent-rgb-g}},{{customAccent-rgb-b}};
-  --accentcolor2: {{base0F-rgb-r}},{{base0F-rgb-g}},{{base0F-rgb-b}};
-  --linkcolor: {{base0F-rgb-r}},{{base0F-rgb-g}},{{base0F-rgb-b}};
+  --accentcolor: {{base09-rgb-r}},{{base09-rgb-g}},{{base09-rgb-b}};
+  --accentcolor2: {{base09-rgb-r}},{{base09-rgb-g}},{{base09-rgb-b}};
+  --linkcolor: {{base09-rgb-r}},{{base09-rgb-g}},{{base09-rgb-b}};
   --mentioncolor: {{base0A-rgb-r}},{{base0A-rgb-g}},{{base0A-rgb-b}};
   --textbrightest: {{base06-rgb-r}},{{base06-rgb-g}},{{base06-rgb-b}};
   --textbrighter: {{base05-rgb-r}},{{base05-rgb-g}},{{base05-rgb-b}};
@@ -36,7 +36,7 @@
 }
 
 .tabBar_c2739c .addFriend_c2739c.addFriend_c2739c.addFriend_c2739c {
-  background-color: #{{base0F-hex}};
+  background-color: #{{base09-hex}};
 }
 
 .inner_c69a7b.biteSize_c69a7b {
