--- a/modules/home-manager/features/vesktop/base0A.theme.css.mustache
+++ b/modules/home-manager/features/vesktop/base0A.theme.css.mustache
@@ -12,7 +12,7 @@
   --accentcolor: {{base0A-rgb-r}},{{base0A-rgb-g}},{{base0A-rgb-b}};
   --accentcolor2: {{base0A-rgb-r}},{{base0A-rgb-g}},{{base0A-rgb-b}};
   --linkcolor: {{base0A-rgb-r}},{{base0A-rgb-g}},{{base0A-rgb-b}};
-  --mentioncolor: {{base0B-rgb-r}},{{base0B-rgb-g}},{{base0B-rgb-b}};
+  --mentioncolor: {{base0A-rgb-r}},{{base0A-rgb-g}},{{base0A-rgb-b}};
   --textbrightest: {{base06-rgb-r}},{{base06-rgb-g}},{{base06-rgb-b}};
   --textbrighter: {{base05-rgb-r}},{{base05-rgb-g}},{{base05-rgb-b}};
   --textbright: {{base05-rgb-r}},{{base05-rgb-g}},{{base05-rgb-b}};
