--- a/modules/home-manager/features/vesktop/base0E.theme.css.mustache
+++ b/modules/home-manager/features/vesktop/base0E.theme.css.mustache
@@ -36,7 +36,7 @@
 }
 
 .tabBar_c2739c .addFriend_c2739c.addFriend_c2739c.addFriend_c2739c {
-  background-color: #{{base0D-hex}};
+  background-color: #{{base0E-hex}};
 }
 
 .inner_c69a7b.biteSize_c69a7b {
