--- a/modules/home-manager/features/vesktop/base08.theme.css.mustache
+++ b/modules/home-manager/features/vesktop/base08.theme.css.mustache
@@ -9,9 +9,9 @@
 
 :root {
   --font: Rubik;
-  --accentcolor: {{base0C-rgb-r}},{{base0C-rgb-g}},{{base0C-rgb-b}};
-  --accentcolor2: {{base0C-rgb-r}},{{base0C-rgb-g}},{{base0C-rgb-b}};
-  --linkcolor: {{base0C-rgb-r}},{{base0C-rgb-g}},{{base0C-rgb-b}};
+  --accentcolor: {{base08-rgb-r}},{{base08-rgb-g}},{{base08-rgb-b}};
+  --accentcolor2: {{base08-rgb-r}},{{base08-rgb-g}},{{base08-rgb-b}};
+  --linkcolor: {{base08-rgb-r}},{{base08-rgb-g}},{{base08-rgb-b}};
   --mentioncolor: {{base0A-rgb-r}},{{base0A-rgb-g}},{{base0A-rgb-b}};
   --textbrightest: {{base06-rgb-r}},{{base06-rgb-g}},{{base06-rgb-b}};
   --textbrighter: {{base05-rgb-r}},{{base05-rgb-g}},{{base05-rgb-b}};
@@ -36,7 +36,7 @@
 }
 
 .tabBar_c2739c .addFriend_c2739c.addFriend_c2739c.addFriend_c2739c {
-  background-color: #{{base0C-hex}};
+  background-color: #{{base08-hex}};
 }
 
 .inner_c69a7b.biteSize_c69a7b {
