--- a/modules/home-manager/features/vesktop/base0F.theme.css.mustache
+++ b/modules/home-manager/features/vesktop/base0F.theme.css.mustache
@@ -8,7 +8,7 @@
 @import url('https://mwittrien.github.io/BetterDiscordAddons/Themes/DiscordRecolor/DiscordRecolor.css');
 
 :root {
-  --font: {{fonts.sansSerif.name}};
+  --font: {{stylix.fonts.sansSerif.name}};
   --accentcolor: {{base0F-rgb-r}},{{base0F-rgb-g}},{{base0F-rgb-b}};
   --accentcolor2: {{base0F-rgb-r}},{{base0F-rgb-g}},{{base0F-rgb-b}};
   --linkcolor: {{base0F-rgb-r}},{{base0F-rgb-g}},{{base0F-rgb-b}};
