--- a/modules/home-manager/features/firefox/another-oneline/userChrome.css
+++ b/modules/home-manager/features/firefox/another-oneline/userChrome.css
@@ -29,7 +29,7 @@
 
 /* URL bar icons */
 #identity-permission-box,
-#star-button-box,
+/*#star-button-box,*/
 #identity-icon-box,
 #picture-in-picture-button,
 #tracking-protection-icon-container,
