--- a/modules/home-manager/features/simple-logout/config/sway.css.mustache
+++ b/modules/home-manager/features/simple-logout/config/sway.css.mustache
@@ -1,7 +1,7 @@
 window {
     border-radius: 10px;
     border: ;
-    box-shadow: 0 0 15px 15px rgba(0, 0, 0, 0.7);
+    box-shadow: 0 3px 5px 1px alpha(black, 0.7);
 }
 
 button {
