--- a/modules/home-manager/features/simple-logout/config/sway.css.mustache
+++ b/modules/home-manager/features/simple-logout/config/sway.css.mustache
@@ -1,6 +1,6 @@
-window {
+.window-frame {
     border-radius: 10px;
-    border: transparent;
+    border: 2px solid #{{base00}};
     box-shadow: 0 0 15px 0 rgba(0,0,0,.7);
 }
 
