--- a/modules/home-manager/features/notifications/swaync/style.css.mustache
+++ b/modules/home-manager/features/notifications/swaync/style.css.mustache
@@ -67,6 +67,10 @@
   background: @fg0;
 }
 
+.widget-buttons-grid {
+  background-color: @bg0;
+}
+
 .widget-buttons-grid>flowbox>flowboxchild>button {
   background-color: @bg1;
   border: transparent;
