--- a/modules/home-manager/features/notifications/swaync/style.css.mustache
+++ b/modules/home-manager/features/notifications/swaync/style.css.mustache
@@ -75,6 +75,7 @@
   background-color: @bg1;
   border: transparent;
   border-radius: 10px;
+  font-size: 20px;
 }
 
 .widget-buttons-grid>flowbox>flowboxchild>button:hover {
