--- a/modules/home-manager/features/notifications/swaync/hyprland.css.mustache
+++ b/modules/home-manager/features/notifications/swaync/hyprland.css.mustache
@@ -16,6 +16,11 @@
   padding: 5px;
 }
 
+.notification-row notification {
+  background: @bg1;
+  border: transparent;
+}
+
 .notification-content {
   background: @bg0;
 }
