--- a/modules/home-manager/features/notifications/swaync/hyprland.css.mustache
+++ b/modules/home-manager/features/notifications/swaync/hyprland.css.mustache
@@ -16,7 +16,7 @@
   padding: 5px;
 }
 
-.notification-row notification {
+.notification-row .notification {
   background: @bg1;
   border: transparent;
 }
