--- a/modules/home-manager/features/notifications/swaync/hyprland.css.mustache
+++ b/modules/home-manager/features/notifications/swaync/hyprland.css.mustache
@@ -25,6 +25,10 @@
   background: @bg0;
 }
 
+.notification-row notification-content {
+  background: @bg1;
+}
+
 .notification-default-action:hover,
 .notification-action:hover {
   background: @bg1;
