--- a/modules/home-manager/features/notifications/swaync/hyprland.css.mustache
+++ b/modules/home-manager/features/notifications/swaync/hyprland.css.mustache
@@ -25,7 +25,7 @@
   background: @bg0;
 }
 
-.notification-row notification-content {
+.notification-row .notification-content {
   background: @bg1;
 }
 
