--- a/modules/home-manager/features/notifications/swaync/style.css.mustache
+++ b/modules/home-manager/features/notifications/swaync/style.css.mustache
@@ -21,6 +21,10 @@
   background: @bg0;
 }
 
+.notification-default-action, notification-default-action:hover {
+  border: none;
+}
+
 .notification-default-action:hover,
 .notification-action:hover {
   background: @bg1;
