--- a/modules/home-manager/features/discord-clients/abaddon/style.css
+++ b/modules/home-manager/features/discord-clients/abaddon/style.css
@@ -5,7 +5,8 @@
   padding: 10px;
 }
 
-.message-container-avatar {
+.message-container-avatar,
+.mutual-friend-item-avatar {
   border: transparent;
-  border-radius: 100px;
+  border-radius: 50%;
 }
