--- a/modules/home-manager/features/browsers/firefox/one-line-firefox/userChrome.css.mustache
+++ b/modules/home-manager/features/browsers/firefox/one-line-firefox/userChrome.css.mustache
@@ -59,25 +59,7 @@
 }
 
 /* my css */
-.tabbrowser-tab::before,
-.tabbrowser-tab::after {
-  display: none !important;
-}
-
-.tab-background {
-  border-top: none !important;
-  box-shadow: none !important;
-}
-
-.tabbrowser-tab {
-  border: none !important;
-}
-
-#nav-bar {
-  box-shadow: none !important;
-}
-
 .tabbrowser-tab[selected] .tab-content {
-  background-color: #c1e6c6 !important;
-  color: #{base01} !important;
+  background-color: #{base01} !important;
+  color: #{base05} !important;
 }
