--- a/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
+++ b/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
@@ -130,3 +130,27 @@
   cursor: pointer;
   display: -moz-box !important;
 }
+
+/* my css */
+.tabbrowser-tab::before,
+.tabbrowser-tab::after {
+  display: none !important;
+}
+
+.tab-background {
+  border-top: none !important;
+  box-shadow: none !important;
+}
+
+.tabbrowser-tab {
+  border: none !important;
+}
+
+#nav-bar {
+  box-shadow: none !important;
+}
+
+.tabbrowser-tab[selected] .tab-content {
+  background-color: #{base01} !important;
+  color: #{base05} !important;
+}
