--- a/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
+++ b/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
@@ -151,6 +151,6 @@
 }
 
 .tabbrowser-tab[selected] .tab-content {
-  background-color: #{base01} !important;
-  color: #{base05} !important;
+  background-color: #{{base01}} !important;
+  color: #{{base05} !important;
 }
