--- a/modules/home-manager/features/browsers/firefox/one-line-firefox/userChrome.css.mustache
+++ b/modules/home-manager/features/browsers/firefox/one-line-firefox/userChrome.css.mustache
@@ -60,6 +60,6 @@
 
 /* my css */
 .tabbrowser-tab[selected] .tab-content {
-  background-color: #{base01} !important;
-  color: #{base05} !important;
+  background-color: #{{base01}} !important;
+  color: #{{base05}} !important;
 }
