--- a/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
+++ b/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
@@ -152,5 +152,5 @@
 
 .tabbrowser-tab[selected] .tab-content {
   background-color: #{{base01}} !important;
-  color: #{{base05} !important;
+  color: #{{base05}} !important;
 }
