--- a/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
+++ b/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
@@ -132,18 +132,14 @@
 }
 
 /* my css */
-.tabbrowser-tab::before,
-.tabbrowser-tab::after {
-  display: none !important;
-}
 
 .tab-background {
-  border-top: none !important;
+  border-top: transparent !important;
   box-shadow: none !important;
 }
 
 .tabbrowser-tab {
-  border: none !important;
+  border: transparent !important;
 }
 
 #nav-bar {
