--- a/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
+++ b/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
@@ -134,19 +134,11 @@
 /* my css */
 
 .tab-background {
-  border-top: transparent !important;
-  box-shadow: none !important;
-}
-
-.tabbrowser-tab {
-  border: transparent !important;
-}
-
-#nav-bar {
   box-shadow: none !important;
 }
 
 .tabbrowser-tab[selected] .tab-content {
   background-color: #{{base01}} !important;
   color: #{{base05}} !important;
+  border-radius: 10px;
 }
