--- a/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
+++ b/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
@@ -137,10 +137,17 @@
   box-shadow: none !important;
 }
 
+.tabbrowser-tab .tab-content {
+  color: #{{base05}} !important;
+  border-radius: 10px;
+  margin: 5px;
+}
+
 .tabbrowser-tab[selected] .tab-content {
   background-color: #{{base01}} !important;
   color: #{{base05}} !important;
   border-radius: 10px;
+  margin: 5px;
 }
 
 #nav-bar {
