--- a/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
+++ b/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
@@ -137,6 +137,10 @@
   box-shadow: none !important;
 }
 
+.tabbrowser-tab {
+  background-color: #{{base00}};
+}
+
 .tabbrowser-tab .tab-content {
   color: #{{base05}} !important;
   border-radius: 10px;
