--- a/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
+++ b/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
@@ -141,6 +141,7 @@
   background-color: #{{base01}} !important;
   color: #{{base05}} !important;
   border-radius: 10px;
+  border: 5px solid #{{base00}};
 }
 
 #nav-bar {
