--- a/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
+++ b/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
@@ -144,6 +144,18 @@
   border: 5px solid #{{base00}};
 }
 
+.tabbrowser-tab:hover:not([selected]) .tab-content {
+  background-color: #{{base01}} !important;
+  border-radius: 10px;
+  border: 5px solid #{{base00}};
+}
+
+.toolbarbutton-icon:hover, 
+.tabs-newtab-button:hover,
+#star-button-box:hover {
+  background-color: #{{base01}} !important;
+}
+
 #nav-bar {
   border: none !important;
 }
