--- a/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
+++ b/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
@@ -150,6 +150,11 @@
   border: 5px solid #{{base00}};
 }
 
+.tabbrowser-tab:not([selected]) .tab-content {
+  border-radius: 10px;
+  border: 5px solid #{{base00}};
+}
+
 .toolbarbutton-icon:hover, 
 .tabs-newtab-button:hover,
 #star-button-box:hover {
