--- a/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
+++ b/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
@@ -141,21 +141,18 @@
   background-color: #{{base01}} !important;
   color: #{{base05}} !important;
   border-radius: 10px;
-  border-top: 5px solid #{{base00}};
-  border-bottom: 5px solid #{{base00}};
+  border: 5px solid #{{base00}};
 }
 
 .tabbrowser-tab:hover:not([selected]) .tab-content {
   background-color: #{{base01}} !important;
   border-radius: 10px;
-  border-top: 5px solid #{{base00}};
-  border-bottom: 5px solid #{{base00}};
+  border: 5px solid #{{base00}};
 }
 
 .tabbrowser-tab:not([selected]) .tab-content {
   border-radius: 10px;
-  border-top: 5px solid #{{base00}};
-  border-bottom: 5px solid #{{base00}};
+  border: 5px solid #{{base00}};
 }
 
 .toolbarbutton-icon:hover, 
