--- a/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
+++ b/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
@@ -144,15 +144,18 @@
 .tabbrowser-tab[selected] .tab-content {
   background-color: #{{base01}} !important;
   color: #{{base05}} !important;
+  border-radius: 10px;
   border: 2px solid #{{base00}};
 }
 
 .tabbrowser-tab:hover:not([selected]) .tab-content {
   background-color: #{{base01}} !important;
+  border-radius: 10px;
   border: 2px solid #{{base00}};
 }
 
 .tabbrowser-tab:not([selected]) .tab-content {
+  border-radius: 10px;
   border: 2px solid #{{base00}};
 }
 
