--- a/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
+++ b/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
@@ -77,7 +77,7 @@
 }
 
 #urlbar-background:hover {
-  background-color: none;
+  background: #{{base00}};
 }
 
 /*  Removes the background from the urlbar while not in use  */
@@ -168,4 +168,8 @@
 
 #nav-bar {
   border: none !important;
+}
+
+#tabbrowser-tabs {
+  border-bottom: 5px;
 }
