--- a/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
+++ b/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
@@ -78,6 +78,8 @@
 
 #urlbar-background:hover {
   background: #{{base00}};
+  border: transparent;
+  box-shadow: none;
 }
 
 /*  Removes the background from the urlbar while not in use  */
