--- a/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
+++ b/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
@@ -159,7 +159,9 @@
 }
 
 #urlbar {
-  padding = 10px;
+  padding: 10px;
+  border: transparent;
+  border-radius: 10px;
 }
 
 #urlbar-background:hover, #urlbar:hover {
