--- a/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
+++ b/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
@@ -158,7 +158,7 @@
   background-color: #{{base01}} !important;
 }
 
-#urlbar {
+#urlbar-background {
   padding: 10px;
   border: transparent;
   border-radius: 10px;
