--- a/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
+++ b/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
@@ -133,6 +133,11 @@
 
 /* my css */
 
+
+#TabsToolbar, #main-menubar, .tabbrowser-tab {
+  background-color: #{{base00}} !important;
+}
+
 .tab-background {
   box-shadow: none !important;
 }
@@ -170,8 +175,4 @@
 
 #tabbrowser-tabs {
   border-bottom: 5px solid #{{base00}} !important;
-}
-
-#TabsToolbar, #main-menubar {
-  background-color: #{{base00}} !important;
 }
