--- a/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
+++ b/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
@@ -51,6 +51,24 @@
 
 /* --- ~END~ element visibility section --- */
 
+/* Navbar size calc */
+:root{
+--tab-border-radius: 6px !important; /*  Tab border radius -- Changes the tabs rounding  *//*  Default: 6px  */
+--NavbarWidth: 43; /*  Default values: 36 - 43  */
+--TabsHeight: 32; /*  Minimum: 30  *//*  Default: 36  */
+--TabsBorder: 8; /*  Doesnt do anything on small layout  *//*  Default: 8  */
+--NavbarHeightSmall: calc(var(--TabsHeight) + var(--TabsBorder))  /*  Only on small layout  *//*  Default: calc(var(--TabsHeight) + var(--TabsBorder))  *//*  Default as a number: 44  */}
+
+@media screen and (min-width:1325px)    /*  Only the tabs space will grow from here  */
+{:root #nav-bar{margin-top: calc(var(--TabsHeight) * -1px - var(--TabsBorder) * 1px)!important; height: calc(var(--TabsHeight) * 1px + var(--TabsBorder) * 1px)} #TabsToolbar{margin-left: calc(1325px / 100 * var(--NavbarWidth)) !important} #nav-bar{margin-right: calc(100vw - calc(1325px / 100 * var(--NavbarWidth))) !important; vertical-align: center !important} #urlbar-container{min-width: 0px !important;  flex: auto !important} toolbarspring{display: none !important}}
+
+@media screen and (min-width:950px) and (max-width:1324px)    /*  Both the tabs space and the navbar will grow  */
+{:root #nav-bar{margin-top: calc(var(--TabsHeight) * -1px - var(--TabsBorder) * 1px) !important; height: calc(var(--TabsHeight) * 1px + var(--TabsBorder) * 1px)} #TabsToolbar{margin-left: calc(var(--NavbarWidth) * 1vw) !important} #nav-bar{margin-right: calc(100vw - calc(var(--NavbarWidth) * 1vw)) !important; vertical-align: center !important} #urlbar-container{min-width: 0px !important;  flex: auto !important} toolbarspring{display: none !important} #TabsToolbar, #nav-bar{transition: margin-top .25s !important}}
+
+@media screen and (max-width:949px)    /*  The window is not enough wide for a one line layout  */
+{:root #nav-bar{padding: 0 5px 0 5px!important; height: calc(var(--NavbarHeightSmall) * 1px) !important} toolbarspring{display: none !important;} #TabsToolbar, #nav-bar{transition: margin-top .25s !important}}
+#nav-bar, #PersonalToolbar{background-color: #0000 !important;background-image: none !important; box-shadow: none !important} #nav-bar{margin-left: 3px;} .tab-background, .tab-stack { min-height: calc(var(--TabsHeight) * 1px) !important}
+
 /*  Removes urlbar border/background  */
 #urlbar-background {
   border: none !important;
@@ -115,11 +133,6 @@
 
 /* my css */
 
-
-#TabsToolbar, #main-menubar, .tabbrowser-tab {
-  background-color: #{{base00}} !important;
-}
-
 .tab-background {
   box-shadow: none !important;
 }
@@ -158,3 +171,4 @@
 #tabbrowser-tabs {
   border-bottom: 5px solid #{{base00}} !important;
 }
+
