--- a/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
+++ b/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
@@ -166,3 +166,10 @@
   border-bottom: 5px solid #{{base00}} !important;
 }
 
+#urlbar-wrapper {
+  height: 36px !important; 
+  margin-bottom: -12px !important;
+}
+#urlbar {
+  margin-top: -12px !important;
+}
