--- a/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
+++ b/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
@@ -162,9 +162,9 @@
   border: none !important;
 }
 
-#tabbrowser-tabs {
+/*#tabbrowser-tabs {
   border-bottom: 5px solid #{{base00}} !important;
-}
+}*/
 
 #urlbar-wrapper {
   height: 45px !important; 
