--- a/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
+++ b/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
@@ -172,9 +172,11 @@
   background: #{{base01}} !important;
   border: transparent;
   border-radius: 10px;
+  padding: 10px;
 }
 
 #urlbar:not(:hover):not([breakout][breakout-extend]) > #urlbar-background {
   box-shadow: none !important;
   background: #{{base01}} !important;
+  padding: 10px;
 }
