--- a/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
+++ b/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
@@ -124,6 +124,8 @@
 
 .tab-background {
   box-shadow: none !important;
+  min-height: var(36px) !important;
+  max-height: var(36px) !important;
 }
 
 .tabbrowser-tab[selected] .tab-content {
