--- a/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
+++ b/modules/home-manager/features/browsers/firefox/another-oneline/userChrome.css.mustache
@@ -159,7 +159,7 @@
   border: none !important;
 }
 
-#tabbrowser-tabs {
+#tabbrowser-tabs, #nav-bar {
   border-bottom: 5px solid #{{base00}} !important;
 }
 
@@ -169,6 +169,7 @@
   border: transparent;
   border-radius: 10px;
   padding: 10px;
+  border: 5px solid #{{base01}};
 }
 
 #urlbar:not(:hover):not([breakout][breakout-extend]) > #urlbar-background {
