--- a/modules/home-manager/features/browsers/firefox/stylix/userChrome.css.mustache
+++ b/modules/home-manager/features/browsers/firefox/stylix/userChrome.css.mustache
@@ -156,15 +156,17 @@
   border-bottom: 5px solid #{{base00}} !important;
 }
 
+#urlbar {
+  border-radius: 10px !important;
+}
+
 #urlbar > #urlbar-background {
   box-shadow: none !important;
   background: #{{base00}} !important;
   border: 5px solid #{{base01}};
-  border-radius: 10px !important;
 }
 
 #urlbar:not(:hover):not([breakout][breakout-extend]) > #urlbar-background {
   box-shadow: none !important;
   background: #{{base00}} !important;
-  border-radius: 10px !important;
 }
