--- a/modules/home-manager/features/browsers/firefox/stylix/userChrome.css.mustache
+++ b/modules/home-manager/features/browsers/firefox/stylix/userChrome.css.mustache
@@ -164,6 +164,7 @@
   box-shadow: none !important;
   background: #{{base00}} !important;
   border: 5px solid #{{base01}};
+  border-radius: 10px !important;
 }
 
 #urlbar:not(:hover):not([breakout][breakout-extend]) > #urlbar-background {
