--- a/modules/home-manager/features/browsers/firefox/stylix/userChrome.css.mustache
+++ b/modules/home-manager/features/browsers/firefox/stylix/userChrome.css.mustache
@@ -121,7 +121,7 @@
   max-height: var(36px) !important;
 }
 
-.tab-background[selected="true"] {
+.tab-background:selected {
   background-color: rgba({{base05-rgb-r}}, {{base05-rgb-g}}, {{base05-rgb-b}}, 0.09) !important;
   color: #{{base05}} !important;
   border-radius: 10px !important;
