--- a/modules/home-manager/features/browsers/firefox/stylix/userChrome.css.mustache
+++ b/modules/home-manager/features/browsers/firefox/stylix/userChrome.css.mustache
@@ -155,9 +155,9 @@
   border: none !important;
 }
 
-#tabbrowser-tabs, #nav-bar {
+/*#tabbrowser-tabs, #nav-bar {
   border-bottom: 5px solid #{{base00}} !important;
-}
+}*/
 
 #urlbar {
   border-radius: 10px !important;
