fix discord theme

--- a/modules/home-manager/features/discord-clients/vesktop/my.theme.css.mustache
+++ b/modules/home-manager/features/discord-clients/vesktop/my.theme.css.mustache
@@ -17,7 +17,7 @@
 
 :root {
   /* spacing between panels */
-  --gap: 0px;
+  --gap: 10px;
 
   /* thickness of unread messages divider and highlighted message borders */
   --divider-thickness: 2px;
@@ -71,9 +71,9 @@
   --offline: var(--text-4); /* change to #83838b for default offline color */
 
   /* border colors */
-  --border-light: transparent; /* light border color */
-  --border: transparent; /* normal border color */
-  --button-border: transparent; /* neutral border color of buttons */
+  --border-light: #{{base01}}; /* light border color */
+  --border: #{{base01}}; /* normal border color */
+  --button-border: #{{base01}}; /* neutral border color of buttons */
 
   /* base colors */
   --red-1: #{{base08}};
