--- a/modules/home-manager/features/discord-clients/vesktop/my.theme.css.mustache
+++ b/modules/home-manager/features/discord-clients/vesktop/my.theme.css.mustache
@@ -107,6 +107,6 @@
   --purple-5: #{{base0E}};
 }
 
-* {
+.scroller__36d07, .scrollerBase__99f8c, .scroller__629e4 {
   scrollbar-color: #{{base02}};
 }
