--- a/modules/home-manager/features/launchers/wofi/style-catppuccin.css.mustache
+++ b/modules/home-manager/features/launchers/wofi/style-catppuccin.css.mustache
@@ -18,6 +18,7 @@ window {
   border: transparent;
   outline: transparent;
   box-shadow: none;
+  margin-left: -16px;
 }
 
 #inner-box {
@@ -37,4 +38,8 @@ window {
 
 #img {
   padding-right: 10px;
+}
+
+#input > image.left {
+  -gtk-icon-transform:scaleX(0);
 }
