--- a/modules/home-manager/features/swayosd/style.css.mustache
+++ b/modules/home-manager/features/swayosd/style.css.mustache
@@ -1,5 +1,5 @@
 window#osd {
-  padding: 0px;
+  padding: 10px 15px;
   border-radius: 999px;
   background-color: #{{base00}};
   border: 1px solid #{{base01}};
